<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
     >

    <RelativeLayout 
    android:id="@+id/lyt_edit_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/gc_editnamebg" 
    >
     </RelativeLayout>

        <TextView
            android:id="@+id/txtGroupListHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/gc_edit_group_name"
            android:textColor="@color/gc_blue"
            android:textSize="16sp" />
        
        <EditText
            android:id="@+id/edt_group_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/lyt_edit_title"
            android:layout_alignParentBottom="false"
            android:layout_alignRight="@+id/lyt_edit_title"
            android:layout_below="@+id/txtGroupListHelp"
            android:layout_centerInParent="false"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20sp"
            android:background="@drawable/gc_edit_text"
            android:imeOptions="actionDone"
            android:imeActionLabel="Done"
            android:lines="1"
            android:textSize="20sp" />
        
       <ImageButton
           android:id="@+id/btn_done"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignBottom="@+id/lyt_edit_title"
           android:layout_alignLeft="@+id/edt_group_title"
           android:layout_marginBottom="8dp"
           android:layout_marginLeft="5dp"
           android:background="@drawable/gc_btn_done_large"
           android:contentDescription="@string/gc_done" />
       
       <ImageButton
           android:id="@+id/btn_cancel"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignBottom="@+id/lyt_edit_title"
           android:layout_alignRight="@+id/edt_group_title"
           android:layout_marginBottom="8dp"
           android:layout_marginRight="5dp"
           android:background="@drawable/gc_btn_cancel"
           android:contentDescription="@string/gc_cancel" />

</RelativeLayout>