<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/header_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/gc_headerbg" >

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/gc_btn_back"
            android:contentDescription="@string/gc_back"  />
        
                <TextView
            android:id="@+id/txt_group_title"
            style="@style/gc_Header_Bar_Text"
            android:layout_centerInParent="true"
            android:ellipsize="end"
            android:lines="1"
            android:scrollHorizontally="true"
            android:text="Groupcentric Profile" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lyt_colorline"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_bar"
        android:background="@drawable/gc_colorlineimg" >
    </RelativeLayout>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/lyt_colorline"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lyt_colorline"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imgProfileImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/gc_blankprofileimg_large" />

            <RelativeLayout
                android:id="@+id/lyt_userInfo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gc_list_item_small_row_bg" >

                <TextView
                    android:id="@+id/txtUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/gc_username"
                    android:textColor="@color/gc_font_black"
                    android:textSize="20dp" />

                <ImageView
                    android:id="@+id/img_smallProfilePic"
                    android:layout_width="20dip"
                    android:layout_height="20dip"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:scaleType="centerCrop"
                    android:background="@drawable/gc_blankprofileimg_small" />
            </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_bar"
        android:background="@drawable/gc_notificationscolorline" >
    </RelativeLayout>
            <RelativeLayout
                android:id="@+id/lyt_settings"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gc_list_item_profile_bg" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Groupcentric Settings"
                        android:textColor="@color/gc_font_black"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gc_settings_desc"
                        android:textColor="@color/gc_font_gray"
                        android:textSize="14sp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/img_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/gc_btn_settings" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/lyt_feedback"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gc_list_item_profile_bg" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Groupcentric Feedback"
                        android:textColor="@color/gc_font_black"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gc_feedback_desc"
                        android:textColor="@color/gc_font_gray"
                        android:textSize="14sp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/img_feedback"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/gc_btn_feedback" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/lyt_about"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gc_list_item_profile_bg" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="About Groupcentric"
                        android:textColor="@color/gc_font_black"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gc_about_desc"
                        android:textColor="@color/gc_font_gray"
                        android:textSize="14sp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/img_about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/gc_btn_about" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/lyt_tos"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gc_list_item_profile_bg" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Groupcentric TOS"
                        android:textColor="@color/gc_font_black"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gc_tos_desc"
                        android:textColor="@color/gc_font_gray"
                        android:textSize="14sp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/img_tos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/gc_btn_privacy" />
            </RelativeLayout>
            
                       <RelativeLayout
                android:id="@+id/lyt_exit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gc_list_item_profile_bg" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Logout of Groupcentric"
                        android:textColor="@color/gc_font_black"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gc_logout_desc"
                        android:textColor="@color/gc_font_gray"
                        android:textSize="14sp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/img_logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/gc_btn_exit" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>